# tRAGar

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  SPEC.md  _typos.toml  index.html  justfile  lefthook.yml  llm.txt  manifest  package.json  playwright.config.ts  uacaei2krh9vkvcbateitngd1fvm5jgc
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: node-ci.yml  pages.yml
.wai/: AGENTS.md  config.toml
.wai/projects/tRAGar v0.1/: .state
.wai/projects/tragar-tracer-bullet/: .state
.wai/resources/agent-config/: .projections.yml
.wai/resources/ubiquitous-language/: README.md
docs/: index.html
examples/opfs/: index.html
examples/playground/: index.html
examples/tracer-bullet/: index.html
js/: errors.ts  package.json  tragar.ts  tsconfig.json  tsconfig.typedoc.json  typedoc.json  types.ts
js/seams/: fs-store.ts  opfs-store.ts  transformers-embedder.ts
js/tests/: bootstrap.test.ts  slice-file-store.test.ts  slice-persistence.test.ts  slice-querystream.test.ts  slice-transformers.test.ts  slice-vector-access.test.ts  slice2.test.ts
openspec/: project.md
openspec/changes/add-clusterer-seam/: design.md  proposal.md  tasks.md
openspec/changes/add-contrastive-queries/: proposal.md  tasks.md
openspec/changes/add-file-store/: proposal.md  tasks.md
openspec/changes/add-intrinsic-dim-stats/: proposal.md  tasks.md
src/bind/: CMakeLists.txt  bindings.cpp
src/core/: CMakeLists.txt  tragar_core.cpp  tragar_core.hpp
tests/browser/: tracer-bullet.spec.ts
tests/native/: CMakeLists.txt  test_bootstrap.cpp
(+50 files in other folders)
